[gd_scene load_steps=8 format=2]

[ext_resource path="res://CubeGlow.tres" type="Material" id=1]
[ext_resource path="res://Enemies/EnemySpawner.gd" type="Script" id=2]
[ext_resource path="res://Interface/HUD.tres" type="Theme" id=3]
[ext_resource path="res://SFX/facility_breach_siren.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="Animation" id=3]
resource_name = "ShowWaveWarning"
length = 3.6
tracks/0/type = "value"
tracks/0/path = NodePath("WaveUI/WaveWarningLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 2.3, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="EnemySpawner" type="Spatial"]
script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 0.516684, 0.245056, 0.403715, -0.4721, 0.284033, 0.431796, -0.0126489, -0.590993, 0.374922, 0, 1.341, -0.0975797 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 0.516956, 0.328651, 0.338739, -0.470732, 0.322665, 0.405338, 0.0341648, -0.527139, 0.459301, 0, 1.37694, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="WaveUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveWarningLabel" type="Label" parent="WaveUI"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.5
margin_top = 150.0
margin_right = 130.5
margin_bottom = 27.0
custom_colors/font_color = Color( 0.858824, 0.976471, 0.0470588, 1 )
text = "Wave 1 Started"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="WaveUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -213.0
margin_top = -40.0
margin_right = 213.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveInfoLabel" type="Label" parent="WaveUI/HBoxContainer"]
margin_top = 6.0
margin_right = 410.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.858824, 0.976471, 0.0470588, 1 )
text = "Enemies left in wave: 10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveTimerLabel" type="Label" parent="WaveUI/HBoxContainer"]
visible = false
margin_left = 414.0
margin_top = 6.0
margin_right = 481.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.858824, 0.976471, 0.0470588, 1 )
text = "5.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIAnimate" type="AnimationPlayer" parent="."]
anims/ShowWaveWarning = SubResource( 3 )

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 50.0
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
